Grid body ready.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
   <!-- Test Section -->
   <section id="thermostat-view"></section>
 
+  <!-- <form name="myform" id="myform">
+    <table id="blacklistgrid">
+        <tr id="Row1">
+            <td class="space">&nbsp;</td>
+            <td>Red</td>
+            <td>Yellow</td>
+            <td>Green</td>
+        </tr>
+        <tr id="Row2">
+            <td>
+                <input type="text" placeholder="shade" name="shade" />
+            </td>
+            <td>
+                <input type="checkbox" name="red" />
+            </td>
+            <td>
+                <input type="checkbox" name="yellow" />
+            </td>
+            <td>
+                <input type="checkbox" name="green" />
+            </td>
+        </tr>
+    </table>
+    <button type="button" id="btnAdd">Add few more Rows!</button>
+    </br>
+    </br>
+    <button type="button" id="btnAddCol">Add new column</button>
+    </br>
+    </br>
+    <input type="submit"></input>
+</form> -->
+
+
   <!-- jQuery Version 1.11.0 -->
   <script src="jquery-1.11.1.js"></script>
 
